WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90914
[Chromium] REGRESSION(
r121909
): m_currentInputEvent never set
https://bugs.webkit.org/show_bug.cgi?id=90914
Summary
[Chromium] REGRESSION(r121909): m_currentInputEvent never set
Adam Klein
Reported
2012-07-10 15:40:37 PDT
[Chromium] REGRESSION(
r121909
): m_currentInputEvent never set
Attachments
Patch
(1.65 KB, patch)
2012-07-10 15:42 PDT
,
Adam Klein
no flags
Details
Formatted Diff
Diff
Patch
(1.94 KB, patch)
2012-07-10 15:47 PDT
,
Adam Klein
inferno
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Klein
Comment 1
2012-07-10 15:42:25 PDT
Created
attachment 151539
[details]
Patch
Adam Klein
Comment 2
2012-07-10 15:47:01 PDT
Created
attachment 151541
[details]
Patch
Vincent Scheib
Comment 3
2012-07-10 15:49:20 PDT
Can we manufacture a test verifying the correct behavior of window.open?
Adam Klein
Comment 4
2012-07-10 15:52:22 PDT
(In reply to
comment #3
)
> Can we manufacture a test verifying the correct behavior of window.open?
That would be great, but I'm not sure this can be done as a layout test. Does DRT expose anything regarding "background" vs "foreground" "tabs"?
Adam Klein
Comment 5
2012-07-10 15:54:51 PDT
Landing for now, as the code it's fixing is brand new and clearly wrong. Will poke around to see about adding a test in the meantime.
Vincent Scheib
Comment 6
2012-07-10 16:10:07 PDT
Thx for catching & fixing. Chat w/ Darin indicates that this is a painful bit of code to test in webkit, as DRT likely doesn't have concepts such as tabs, or logic to have it be foreground or background. Easiest test coverage may be via a browser test. I've created a chrome issue for that, since we don't know where the test should be implemented yet.
https://code.google.com/p/chromium/issues/detail?id=136614
Adam Klein
Comment 7
2012-07-10 18:13:24 PDT
Committed
r122284
: <
http://trac.webkit.org/changeset/122284
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug